fixed the form overlapping prob by fixing z-index of the nav bar

--- a/Final Project/styles/all.css
+++ b/Final Project/styles/all.css
@@ -34,6 +34,7 @@ p {
   position: sticky;
   top: 0px;
   background-color: black;
+  z-index: 1;
 }
 .menu ul {
   list-style-type: none;
@@ -93,9 +94,6 @@ p {
   grid-column: 3;
 }
 
-.container {
-
-}
 
 /*On homepage*/
 .homecontainer {
@@ -266,15 +264,9 @@ p {
 
 /*On Contact Page*/
 
-/*.contactcontainer{
-  display: grid;
-  grid-template-columns: 1fr 3.332fr 1fr;
-  grid-template-rows:  80px 650px;
-  grid-row-gap: 0px;
-}*/
-
 .container{
-  position: relative;
+  float: none;
+  position: static;
   left: 33.8%;
   margin-top: 10%;
   width: 30%;
@@ -297,6 +289,7 @@ input[type=text],input[type=email], input[type=number], input[list],select, text
     margin-left: 10px;
     background-color: white;
     opacity: 0.8;
+    z-index: 10;
 }
 
 input[type=submit] {
